--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       <theme-toggle-element/>
     </p> -->
     <!-- Badge -->
-    <a href="https://github.com/docsifyjs/docsify/">
-      <img src="https://img.shields.io/github/stars/docsifyjs/docsify" alt="GitHub Repo stars"  style="vertical-align: top;">
+     <a href="https://github.com/10111y/10111y.github.io">
+      <img src="https://img.shields.io/github/stars/10111y/10111y.github.io" alt="GitHub Repo stars"  style="vertical-align: top;">
     </a>
   </nav>
   <div id="app">请稍等，玩命加载中...</div>
