--- a/index.html
+++ b/index.html
@@ -13,28 +13,24 @@
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/sidebar-folder.min.css" />
   <link rel="stylesheet" href="//unpkg.com/@docisfy/navbar-fixed">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-demo@latest/dist/index.min.css" />
-
-  
   <style>
   </style>
 </head>
 
 <body>
-  <!-- Logo -->
   <nav class="app-nav">
     <p>
       <a href="/">
         <img src="./_media/icon.svg" alt="Logo">
       </a>
     </p>
-    <!-- Title -->
     <p>@Frontend Notes</p>
-    <!-- <p>
-      <theme-toggle-element/>
-    </p> -->
-    <!-- Badge -->
-     <a href="https://github.com/10111y/10111y.github.io">
-      <img src="https://img.shields.io/github/stars/10111y/10111y.github.io" alt="GitHub Repo stars"  style="vertical-align: top;">
+    <p>
+      <theme-toggle-element />
+    </p>
+    <a href="https://github.com/10111y/10111y.github.io">
+      <img src="https://img.shields.io/github/stars/10111y/10111y.github.io" alt="GitHub Repo stars"
+        style="vertical-align: top;">
     </a>
   </nav>
   <div id="app">请稍等，玩命加载中...</div>
@@ -45,6 +41,7 @@
       coverpage: true,
       loadSidebar: true,
       subMaxLevel: 3,
+      auto2top: true,
       sidebarDisplayLevel: 1,
       // topMargin: 20,
       search: {
@@ -57,18 +54,16 @@
         color: "var(--theme-color,#42b983)",
         height: "3px",
       },
-      loadNavbar: false, // IMPORTANT
+      loadNavbar: false,
       mermaidConfig: {
         querySelector: ".mermaid"
       },
-      // docsify-valine (defaults)
       Valine: {
-              appId: 'P82KEUXDw5eW65Wo2jiNH1R4-gzGzoHsz',
-              appKey: 'eQBNQnGYXwwuXWiWLqPt7dLK'
-          }
+        appId: 'P82KEUXDw5eW65Wo2jiNH1R4-gzGzoHsz',
+        appKey: 'eQBNQnGYXwwuXWiWLqPt7dLK'
+      }
     }
   </script>
-  <!-- Docsify v4 -->
   <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
@@ -85,7 +80,7 @@
   <script src="//unpkg.com/docsify-mermaid@2.0.1/dist/docsify-mermaid.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify-demo@latest/dist/index.min.js"></script>
 
-  <!-- <script src="./assets/theme-toggle.js"></script> -->
+  <script src="./assets/theme-toggle.js"></script>
   <script src="./assets/background-switcher.js"></script>
 
   <script src='//unpkg.com/valine/dist/Valine.min.js'></script>
