--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" id="theme-style" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
-  <!-- <link rel="stylesheet" id="theme-style" href="//cdn.jsdelivr.net/npm/docsify/themes/dark.css"> -->
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/sidebar-folder.min.css" />
   <link rel="stylesheet" href="//unpkg.com/@docisfy/navbar-fixed">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-demo@latest/dist/index.min.css" />
@@ -25,25 +24,31 @@
       </a>
     </p>
     <p>@Frontend Notes</p>
-    <p>
-      <theme-toggle-element />
-    </p>
+    <!-- <p> -->
+      <ul>
+        <li class="theme-switch">
+            Theme Switch
+            <ul>
+                <li data-theme="light">Light Mode</li>
+                <li data-theme="dark">Dark Mode</li>
+                <li data-theme="system">Follow System</li>
+            </ul>
+        </li>
+    </ul>
+    <!-- </p> -->
     <a href="https://github.com/10111y/10111y.github.io">
-      <img src="https://img.shields.io/github/stars/10111y/10111y.github.io" alt="GitHub Repo stars"
-        style="vertical-align: top;">
+      <img src="https://img.shields.io/github/stars/10111y/10111y.github.io" alt="GitHub Repo stars">
     </a>
   </nav>
   <div id="app">请稍等，玩命加载中...</div>
   <script>
     window.$docsify = {
       name: 'Frontend Notes',
-      // repo: '#',
       coverpage: true,
       loadSidebar: true,
       subMaxLevel: 3,
       auto2top: true,
-      sidebarDisplayLevel: 1,
-      // topMargin: 20,
+      sidebarDisplayLevel: 0,
       search: {
         paths: 'auto',
         placeholder: 'Type to search',
@@ -54,7 +59,6 @@
         color: "var(--theme-color,#42b983)",
         height: "3px",
       },
-      loadNavbar: false,
       mermaidConfig: {
         querySelector: ".mermaid"
       },
@@ -65,26 +69,33 @@
     }
   </script>
   <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+  <!-- 侧边栏 -->
   <script src="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
+  <!-- 搜索 -->
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
+  <!-- 表情符号 -->
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/emoji.min.js"></script>
-  <!-- <script src="//cdn.jsdelivr.net/npm/docsify-copy-code/dist/docsify-copy-code.min.js"></script> -->
+  <!-- 分页 -->
   <script src="//unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script>
+  <!-- 警告引用 -->
   <script src="https://unpkg.com/docsify-plugin-flexible-alerts"></script>
+  <!-- 进度体条 -->
   <script src="https://cdn.jsdelivr.net/npm/docsify-progress@latest/dist/progress.min.js"></script>
+  <!-- mermaid 图表库 -->
   <script type="module">
     import mermaid from "https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs";
     mermaid.initialize({ startOnLoad: true });
     window.mermaid = mermaid;
   </script>
   <script src="//unpkg.com/docsify-mermaid@2.0.1/dist/docsify-mermaid.js"></script>
+  <!-- 演示 -->
   <script src="//cdn.jsdelivr.net/npm/docsify-demo@latest/dist/index.min.js"></script>
-
-  <script src="./assets/theme-toggle.js"></script>
-  <script src="./assets/background-switcher.js"></script>
-
+  <!-- 评论 -->
   <script src='//unpkg.com/valine/dist/Valine.min.js'></script>
   <script src="//unpkg.com/docsify-valine/dist/docsify-valine.min.js"></script>
+
+  <script src="./assets/theme-switcher.js"></script>
+  <script src="./assets/background-switcher.js"></script>
 </body>
 
 </html>
